# awrit

./: .gitignore  .prettierrc.yaml  CMakeLists.txt  LICENSE.txt  README.md  biome.json  electron-builder.yml  electron.vite.config.ts  index.js  package-lock.json  package.json
.github/workflows/: check-version.yml  release-mac.yml
awrit/: CMakeLists.txt  awrit.cc  awrit.h  awrit_shim.sh  input_event_handler.cc  input_event_handler.h  input_handler.cc  input_handler.h  kitty_keys.h  main.cc  main_mac.mm  shared_memory.h  shared_memory_posix.cc  shared_memory_win.cc  tty_escape_parser.cc  tty_escape_parser.h  tty_input_handler.cc  tty_input_handler.h  tty_input_handler_posix.cc  tty_input_handler_win.cc  tui.cc  tui.h  utf8_decode.h
awrit/resources/mac/: Info.plist  helper-Info.plist
awrit/resources/mac/English.lproj/: InfoPlist.strings  MainMenu.xib
awrit/shm/: CMakeLists.txt  shared_memory.h  shared_memory_posix.cc  shared_memory_unittest.cc
awrit/string/: CMakeLists.txt  string_utils.cc  string_utils.h  string_utils_unittest.cc
awrit/tty/: CMakeLists.txt  enum_class.h  escape_codes.h  escape_parser.cc  escape_parser.h  escape_parser_unittest.cc  input.h  input_event.cc  input_event.h  input_event_test.cc  input_posix.cc  kitty_keys.cc  kitty_keys.h  kitty_keys_unittest.cc  mouse.h  output.cc  output.h  sgr_mouse.cc  sgr_mouse.h
src/main/: index.ts
src/main/tty/: escapeCodes.ts  escapeParser.test.ts  escapeParser.ts  graphics.ts  graphicsTest.ts  inputTest.ts  kittyGraphics.ts  kittyKeys.ts  mouse.ts  output.ts  posixKeyCodes.ts  sgrMouse.ts
src/preload/: index.d.ts  index.ts
src/renderer/src/: renderer.ts
